--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = libs/imgui
 	url = https://github.com/ocornut/imgui
 	branch = docking
+[submodule "libs/implot"]
+	path = libs/implot
+	url = git@github.com:epezent/implot.git
